Fix closing div tag in index.html

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@ Além disso, há teóricos que acreditam que os felinos possuem habilidades tele
     <p>Preparem-se para a frente fria que vem para o país da melhor maneira possível.</p>
   </div>        
 </div>
+</div>
       <footer>© 2023 - Rocketseat Explorer</footer>
     <script type="module" src="/main.js"></script>
   </body>
