--- a/index.html
+++ b/index.html
@@ -3,10 +3,70 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Operadores matemáticos</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Blog de gatos</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <header>
+        <img src="./assets/paw.svg" alt="icone com a marca de pata de um gato">
+        <input type="text" />
+        <img src="./assets/jojo.png" alt="foto do perfil de usuário">
+      </header>
+      <div class="main">
+        <img src="./assets/cat.jpg" alt="foto de um gato">
+        <h1>Seriam os gatos astronautas?</h1>
+        <div class="like-dislike">
+          <img src="./assets/thumbs-up.svg" alt="like">
+          <img src="./assets/thumbs-down.svg" alt="dislike">
+        </div>
+        <div class="text-content">
+          Os gatos são animais fascinantes e cercados de mistérios. De temperamento independente e misterioso, esses felinos são conhecidos por sua agilidade, elegância e um comportamento muitas vezes imprevisível. Contudo, recentemente, uma teoria tem ganhado espaço na internet e entre teóricos de conspiração: seriam os gatos astronautas?
+A teoria sugere que os gatos não são animais terrestres, mas sim seres extraterrestres enviados para realizar uma missão específica em nosso planeta. Há relatos históricos que apontam para o fato de que os gatos eram considerados seres sagrados em diferentes culturas e até mesmo associados a figuras divinas. Isso poderia indicar que os gatos têm uma origem muito mais mística do que se pensava anteriormente.
+Além disso, há teóricos que acreditam que os felinos possuem habilidades telepáticas e são capazes de se comunicar com outras espécies alienígenas. Essa crença baseia-se em relatos de pessoas que afirmam terem visto gatos reagindo a estímulos que não são perceptíveis aos seres humanos, ou até mesmo se comportando de maneira incomum durante eventos astronômicos, como uma aurora boreal. Esses e outros indícios foram interpretados como sinais de que os gatos seriam seres interplanetários.
+        </div>
+      </div>
+      <div class="related">
+        <h2 class="related-title">Artigos relacionados</h2>
+        <div class="article">
+          <img class="article-image" src="./assets/ar-cat-01.jpg" alt="foto de um gato">
+          <div class="article-content">
+          <h3>Sábado preguiçoso</h3>
+          <p>Descubra atividades interessantes para fazer com seu pet durante os finais de semana.</p>
+        </div>        
+      </div>
+
+      <div class="article">
+        <img class="article-image" src="./assets/ar-cat-02.jpg" alt="foto de um gato">
+        <div class="article-content">
+        <h3>Balaio de gatos</h3>
+        <p>Como evitar confusões entre seus gatíneos e acostumá-los desde filhotes.</p>
+      </div>        
+    </div>
+
+    <div class="article">
+      <img class="article-image" src="./assets/ar-cat-03.jpg" alt="foto de um gato">
+      <div class="article-content">
+      <h3>Cartela de cores</h3>
+      <p>Seu gato é inverno intenso? Verão profundo? Descubra as cores que mais combinam com seu bichano.</p>
+    </div>        
+  </div>
+
+  <div class="article">
+    <img class="article-image" src="./assets/ar-cat-04.jpg" alt="foto de um gato">
+    <div class="article-content">
+    <h3>Os gatos sentem frio?</h3>
+    <p>Preparem-se para a frente fria que vem para o país da melhor maneira possível.</p>
+  </div>        
+</div>
+</div>
+      <footer>© 2023 - Rocketseat Explorer</footer>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
